# Neural_Networks

./: .gitignore  README.md  activations.py  layers.py  network.py  network_numpy.py  network_pytorch.py  pyproject.toml
CNN/: convolutional.py  mnist.py  reshape.py
datasets/: yolo_dataset.py
numpy_nn/: activations.py  convolutional.py  layers.py  losses.py  maxpooling.py  reshape.py  residual.py
pytorch_nn/: convolution.py  losses.py  yolo.py
testing/: cnn_numpy.py  cnn_pytorch.py  regression_numpy.py  resnet_numpy.py
