[project]
name = "neural_network"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["numpy_nn"]

[tool.pytest.ini_options]
pythonpath = ["."]
